Colaboratory を使用して作成しました

--- a/10_Oct/1502_理想気体のモル熱容量.ipynb
+++ b/10_Oct/1502_理想気体のモル熱容量.ipynb
@@ -6,8 +6,6 @@
       "name": "1502_理想気体のモル熱容量.ipynb",
       "provenance": [],
       "collapsed_sections": [],
-      "toc_visible": true,
-      "authorship_tag": "ABX9TyO8UR2ZWyQGPOCihhurDyYi",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -461,10 +459,10 @@
       "source": [
         "\\begin{align}\n",
         "\\Delta Q_{\\Delta p=0}\n",
-        "&= {\\rm 1 \\ mol } \\cdot C_{V} \\cdot \\Delta T_{\\Delta p=0}\\\\[3mm]\n",
+        "&= {\\rm 1 \\ mol } \\cdot C_{p} \\cdot \\Delta T_{\\Delta p=0}\\\\[3mm]\n",
         "C_p \n",
         "&= \\left(\\dfrac{\\Delta Q}{\\Delta T}\\right)_{p}\\\\\n",
-        "&=  \\dfrac{\\Delta U + \\cancelto{nR\\Delta T}{p\\Delta V}}{\\Delta T}\n",
+        "&=  \\dfrac{\\Delta U + \\cancelto{{\\rm 1 \\ mol}\\cdot R\\Delta T}{p\\Delta V}}{\\Delta T}\n",
         "= \\dfrac{\\Delta U}{\\Delta T} + R  \\\\[2mm]\n",
         "C_p&= C_V + R\\quad {\\rm [J/K\\cdot mol]}\n",
         "\\end{align}"
@@ -544,7 +542,7 @@
         "\\begin{align}\n",
         "C_V &= \\left(\\dfrac{\\Delta Q}{\\Delta T}\\right)_{V} \n",
         "= \\dfrac{\\Delta U}{\\Delta T}\n",
-        "\\approx \\dfrac{\\cancelto{3}{f}}{3} R \n",
+        "\\approx \\dfrac{\\cancelto{3+2}{f}}{2} R \n",
         "= \\dfrac{5}{2} R \n",
         "\\end{align}\n",
         "\n",
@@ -587,7 +585,8 @@
         "id": "VNb5hFf-vEWF"
       },
       "source": [
-        "### デュロン-プティの法則"
+        "### デュロン-プティの法則\n",
+        "Dulong–Petit law"
       ]
     },
     {
@@ -630,6 +629,58 @@
       "source": [
         "![https://ja.wikipedia.org/wiki/%E3%83%87%E3%83%A5%E3%83%AD%E3%83%B3%EF%BC%9D%E3%83%97%E3%83%86%E3%82%A3%E3%81%AE%E6%B3%95%E5%89%87](https://upload.wikimedia.org/wikipedia/commons/5/54/DebyeVSEinstein.jpg)"
       ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "pAUvXgP9u4tm"
+      },
+      "source": [
+        "この法則を考える場合は, 理想機体では無視してきた相互作用項を取り込み,   \n",
+        "平均をとることで形式的に導出できます"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "icUqCL6OvKaj"
+      },
+      "source": [
+        "一分子の力学的エネルギー $\\varepsilon$ を, 運動エネルギー$K$ と 位置エネルギー$U$ で次のように\n",
+        "\\begin{align}\n",
+        "\\varepsilon &= K + U.\n",
+        "\\end{align}"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "Z2Y3b4L7vzia"
+      },
+      "source": [
+        "1 mol 物質では, 様々な$\\epsilon$ $N_{\\rm A}$ 個の原子分子が存在します.\n",
+        "\n",
+        "これらを全て数え上げれば, 1 mol の全力学的エネルギー $E$ を計算することができます. そこで全ての原子分子が混ざり合って平均化された状態を考えます.\n",
+        "\\begin{align}\n",
+        "E &= \\left< N_{\\rm A} \\cdot \\varepsilon\\right>=N_{\\rm A} \\left< \\varepsilon\\right>\\\\\n",
+        "&= N_{\\rm A} \\left( \\left< K \\right>  +  \\left< U \\right> \\right) \\\\\n",
+        "&= N_{\\rm A} \\left(\n",
+        "  \\dfrac{1}{2} m \\left< v^2 \\right>  +  \\left< U \\right>\n",
+        "  \\right) \\\\\n",
+        "&= N_{\\rm A} \\left( \\dfrac{3}{2} k_{\\rm B} T +  \\left< U \\right> \\right) \n",
+        "\\end{align}"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "ma4QDL9zvJw6"
+      },
+      "source": [
+        ""
+      ],
+      "execution_count": null,
+      "outputs": []
     }
   ]
 }
