Colaboratory を使用して作成しました

--- a/11_Nov/1504_熱機関とその効率.ipynb
+++ b/11_Nov/1504_熱機関とその効率.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "name": "1504_熱機関とその効率.ipynb",
       "provenance": [],
-      "authorship_tag": "ABX9TyNgn6pTNX9/ceREarnZk6Yc",
+      "authorship_tag": "ABX9TyO3Ae2Xcf17R8Fid3jUAlWr",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -74,6 +74,74 @@
           "data": {
             "text/html": [
               "<iframe width=\"560\" height=\"315\" src=\"https://www.youtube-nocookie.com/embed/73txXT21aZU\" frameborder=\"0\" allow=\"accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture\" allowfullscreen></iframe>"
+            ],
+            "text/plain": [
+              "<IPython.core.display.HTML object>"
+            ]
+          },
+          "metadata": {
+            "tags": []
+          }
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "nKmtuMZmsLqA",
+        "cellView": "form",
+        "outputId": "2c4adc99-f610-468c-c87b-4028d9f12c1e",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 336
+        }
+      },
+      "source": [
+        "#@title 産業革命を支えた蒸気機関\n",
+        "%%html\n",
+        "<iframe width=\"560\" height=\"315\" src=\"https://www.youtube-nocookie.com/embed/FcDP_QykK3s\" frameborder=\"0\" allow=\"accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture\" allowfullscreen></iframe>"
+      ],
+      "execution_count": null,
+      "outputs": [
+        {
+          "output_type": "display_data",
+          "data": {
+            "text/html": [
+              "<iframe width=\"560\" height=\"315\" src=\"https://www.youtube-nocookie.com/embed/FcDP_QykK3s\" frameborder=\"0\" allow=\"accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture\" allowfullscreen></iframe>"
+            ],
+            "text/plain": [
+              "<IPython.core.display.HTML object>"
+            ]
+          },
+          "metadata": {
+            "tags": []
+          }
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "qoRRR48CqC2G",
+        "cellView": "form",
+        "outputId": "e6f05ae8-7c35-4004-f880-bd18931690b0",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 336
+        }
+      },
+      "source": [
+        "#@title SL: steam locomotion\n",
+        "%%html\n",
+        "<iframe width=\"560\" height=\"315\" src=\"https://www.youtube-nocookie.com/embed/IVVf_3xpZb0\" frameborder=\"0\" allow=\"accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture\" allowfullscreen></iframe>"
+      ],
+      "execution_count": null,
+      "outputs": [
+        {
+          "output_type": "display_data",
+          "data": {
+            "text/html": [
+              "<iframe width=\"560\" height=\"315\" src=\"https://www.youtube-nocookie.com/embed/IVVf_3xpZb0\" frameborder=\"0\" allow=\"accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture\" allowfullscreen></iframe>"
             ],
             "text/plain": [
               "<IPython.core.display.HTML object>"
