clean up after lecture

--- a/11_Nov/1506_熱力学的現象の進む方向.ipynb
+++ b/11_Nov/1506_熱力学的現象の進む方向.ipynb
@@ -6,7 +6,8 @@
       "name": "1506_熱力学的現象の進む方向.ipynb",
       "provenance": [],
       "collapsed_sections": [],
-      "authorship_tag": "ABX9TyMOnqOOgHU/veITgC7jscvz",
+      "toc_visible": true,
+      "authorship_tag": "ABX9TyOceRYDW87T720g61PaMwsL",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -134,6 +135,7 @@
         "\\begin{align}\n",
         "{\\rm d}\\left(TS\\right) \n",
         "&= \\left(T+{\\rm d}T\\right) \\left(S+{\\rm d}S\\right)-TS \\approx T{\\rm d}s + S\\cancelto{0}{{\\rm d}T}\n",
+        "+ \\cancelto{\\approx 0}{{\\rm d}S{\\rm d}T}\n",
         " &= T{\\rm d}S,\n",
         "\\end{align}\n",
         "\n",
@@ -174,7 +176,7 @@
         "id": "fpYRVNeJmLeF"
       },
       "source": [
-        "## 等温定圧変化とヘルムホルツの自由エネルギー $G = U -TS + pV$"
+        "## 等温定圧変化とギプスの自由エネルギー $G = U -TS + pV$"
       ]
     },
     {
@@ -189,6 +191,7 @@
         "\\begin{align}\n",
         "{\\rm d}\\left(pV\\right) \n",
         "&= \\left(p+{\\rm d}p\\right) \\left(V+{\\rm d}V\\right)-pV \\approx p{\\rm d}V + V\\cancelto{0}{{\\rm d}p}\n",
+        "+ \\cancelto{\\approx 0}{{\\rm d}V{\\rm d}p}\n",
         " &= p{\\rm d}V,\n",
         "\\end{align}\n",
         "then\n",
