--- a/11_Nov/1505_エントロピー増大の原理.ipynb
+++ b/11_Nov/1505_エントロピー増大の原理.ipynb
@@ -6,7 +6,7 @@
       "name": "1505_エントロピー増大の原理.ipynb",
       "provenance": [],
       "toc_visible": true,
-      "authorship_tag": "ABX9TyMIUrK0sUvpF9Qf2TnoCIIJ",
+      "authorship_tag": "ABX9TyMKcepahA1T25eazS8Z3pmj",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -454,8 +454,8 @@
         "id": "JJKQ7hXMT682"
       },
       "source": [
-        "- $T_1=20{\\rm {}^{\\circ}C}, m_1 = 1{\\rm\\ kg}$, water in side A\n",
-        "- $T_2=80{\\rm {}^{\\circ}C}, m_2 = 1{\\rm\\ kg}$, water in side B\n",
+        "- $T_1 = 20{\\rm {}^{\\circ}C} =  293{\\rm K}, m_1 = 1{\\rm\\ kg}$, water inside A\n",
+        "- $T_2=80{\\rm {}^{\\circ}C} = 353{\\rm K}, m_2 = 1{\\rm\\ kg}$, water inside B\n",
         "- Mix the two water. $c_w = 4.2 {\\rm\\ J/g.K}\\qquad T=80{\\rm {}^{\\circ}C}$\n",
         "\n",
         "- NB:\n",
