Colaboratory を使用して作成しました

--- a/01_Jan/1101_静止流体の圧力.ipynb
+++ b/01_Jan/1101_静止流体の圧力.ipynb
@@ -6,7 +6,7 @@
       "name": "1101_静止流体の圧力",
       "provenance": [],
       "toc_visible": true,
-      "authorship_tag": "ABX9TyMz/6OFUqsxucNya60HuZBc",
+      "authorship_tag": "ABX9TyNyXOLCpBJ6BZCOuWSPfQnu",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -243,19 +243,30 @@
       "source": [
         "##### 三方向を考慮した圧力の等方性の証明\n",
         "\n",
+        "![](https://www.zigya.com/application/zrc/images/qvar/PHEN11039271.png)\n",
+        "\n",
+        "静止流体であることを踏まえると\n",
+        "\n",
         "$\\require{cancel}$\n",
         "\\begin{align}\n",
         "&\\begin{cases}\n",
-        "F_A &= F_C \\sin \\theta\\\\\n",
-        "F_B &= F_C \\cos \\theta\n",
+        "F_2 &= F_1 \\sin \\theta\\\\\n",
+        "F_3 &= F_1 \\cos \\theta\n",
         "\\end{cases}\\\\\n",
         "%\n",
         "&\\begin{cases}\n",
-        "P_A \\cdot BC \\cdot d\n",
-        "&= P_C \\cdot BA \\sin \\theta \\cdot d\\\\\n",
-        "F_B \\cdot AC \\cdot d\n",
-        "&= P_C \\cdot BA \\cos \\theta \\cdot d\n",
-        "\\end{cases}\n",
+        "P_2 \\cdot AC \\cdot d\n",
+        "&= P_1 \\cdot \\cancelto{AC}{AE \\sin \\theta} \\cdot d\\\\\n",
+        "P_3 \\cdot CE \\cdot d\n",
+        "&= P_1 \\cdot \\cancelto{CE}{AE \\cos \\theta} \\cdot d\n",
+        "\\end{cases}\\\\\n",
+        "%\n",
+        "&\\begin{cases}\n",
+        "P_2 &=P_1\\\\\n",
+        "P_3 &=P_1\\\\\n",
+        "\\end{cases}\\\\[2mm]\n",
+        "%\n",
+        "&P_1 = P_2 = P_3\n",
         "\\end{align}"
       ]
     },
