done before the end of p126

--- a/01_Jan/1103_揚力.ipynb
+++ b/01_Jan/1103_揚力.ipynb
@@ -5,7 +5,8 @@
     "colab": {
       "name": "1103_揚力",
       "provenance": [],
-      "authorship_tag": "ABX9TyOSUoWNFPog7/1XRT60Drx2",
+      "toc_visible": true,
+      "authorship_tag": "ABX9TyOYwHVwpVS30vpMWtGQFHC4",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -58,22 +59,76 @@
           "base_uri": "https://localhost:8080/",
           "height": 336
         },
-        "cellView": "form",
         "id": "8nRp9FyjE3xh",
-        "outputId": "0b32fc49-f3b2-42f0-f4f3-1b9d42e427e7"
+        "cellView": "form",
+        "outputId": "1874f56b-4880-4eba-a817-5cd70d9e6553"
       },
       "source": [
         "#@title 揚力/Lift\n",
+        "#@markdown 翼の上下で流線上の流体の速度が異なることを確認して下さい\n",
         "%%html\n",
         "<iframe width=\"560\" height=\"315\" src=\"https://www.youtube-nocookie.com/embed/UqBmdZ-BNig\" frameborder=\"0\" allow=\"accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture\" allowfullscreen></iframe>"
       ],
-      "execution_count": 1,
+      "execution_count": 2,
       "outputs": [
         {
           "output_type": "display_data",
           "data": {
             "text/html": [
               "<iframe width=\"560\" height=\"315\" src=\"https://www.youtube-nocookie.com/embed/UqBmdZ-BNig\" frameborder=\"0\" allow=\"accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture\" allowfullscreen></iframe>"
+            ],
+            "text/plain": [
+              "<IPython.core.display.HTML object>"
+            ]
+          },
+          "metadata": {
+            "tags": []
+          }
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "XSADmkUo5swO"
+      },
+      "source": [
+        "- 翼の上部(top)の流速$v_{t}$は、下部(low)の流速$v_{l}$よりも、早くなっています: \n",
+        "\\begin{align}\n",
+        "v_{t}>v_{l}\n",
+        "\\end{align}\n",
+        "\n",
+        "  - ベルヌーイの法則を適用すると、翼に出会うまでは同じ流線が、  \n",
+        "  流線上の上部の圧力$p_{t}$と、\n",
+        "  流線上の下部の圧力$p_{l}$で、差が生じます:\n",
+        "  \\begin{align}\n",
+        "  p_{t}<p_{l}\n",
+        "  \\end{align} "
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "cellView": "form",
+        "id": "NYZaWb4i8K2i",
+        "outputId": "0061e139-8009-40aa-d483-cac3c6c11f1b",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 336
+        }
+      },
+      "source": [
+        "#@title 実験:揚力の簡単な実演\n",
+        "%%html\n",
+        "<iframe width=\"560\" height=\"315\" src=\"https://www.youtube-nocookie.com/embed/ekY1PWYp-n0\" frameborder=\"0\" allow=\"accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture\" allowfullscreen></iframe>"
+      ],
+      "execution_count": 4,
+      "outputs": [
+        {
+          "output_type": "display_data",
+          "data": {
+            "text/html": [
+              "<iframe width=\"560\" height=\"315\" src=\"https://www.youtube-nocookie.com/embed/ekY1PWYp-n0\" frameborder=\"0\" allow=\"accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture\" allowfullscreen></iframe>"
             ],
             "text/plain": [
               "<IPython.core.display.HTML object>"
@@ -93,13 +148,16 @@
           "height": 336
         },
         "id": "LvKf6_TLFsAH",
-        "outputId": "9214ff3b-bfc0-488b-f51b-95173dc076da"
+        "cellView": "form",
+        "outputId": "0f555ba5-57d7-44d7-abad-b508c6065d28"
       },
       "source": [
+        "#@title 翼の渦 3:18\n",
+        "#@markdown 下記のリンクへ進み、3:18から 一分間動画を確認してください\n",
         "%%html\n",
         "<iframe width=\"560\" height=\"315\" src=\"https://www.youtube-nocookie.com/embed/3_WgkVQWtno\" frameborder=\"0\" allow=\"accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture\" allowfullscreen></iframe>"
       ],
-      "execution_count": 2,
+      "execution_count": 5,
       "outputs": [
         {
           "output_type": "display_data",
@@ -118,6 +176,53 @@
       ]
     },
     {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "qasP2fPc9xu2"
+      },
+      "source": [
+        "##### 揚力の大きさ\n",
+        "\n",
+        "翼の上部と下部では流線が異なりますが、  \n",
+        "翼に出会う前の流体は、類似の非圧縮性完全流体と仮定すると  \n",
+        "揚力をベルヌーイの定理から導出できます。\n",
+        "\\begin{align}\n",
+        "P_{initial}&=\n",
+        "\\begin{cases}\n",
+        "p_t + \\dfrac{1}{2} \\rho v_t^2+\\rho g h_t \\\\\n",
+        "p_l + \\dfrac{1}{2} \\rho v_l^2+\\rho g h_l \n",
+        "\\end{cases}\n",
+        "\\end{align}\n",
+        "\n",
+        "翼が充分薄いとし$(h_t\\approx h_l)$、上式を引けば\n",
+        "\\begin{align}\n",
+        "0&=\n",
+        "\\left(p_t -p_l\\right)\n",
+        "+ \\dfrac{\\rho}{2}\\left(v_t^2-v_t^2\\right)\\\\[1mm]\n",
+        "p_l - p_t\n",
+        "&=\n",
+        "\\dfrac{\\rho}{2}\\left(v_t^2-v_t^2\\right)\\\\[1mm]\n",
+        "\\Delta p_{lt}\n",
+        "&=\n",
+        "\\dfrac{\\rho}{2}\\left(v_t^2-v_t^2\\right)\n",
+        "\\end{align}\n"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "Yw3vzcdFAEOx"
+      },
+      "source": [
+        "ここで、薄い翼の面積を上部下部とも $A$ とすれば $F=pA$ より\n",
+        "\\begin{align}\n",
+        "F_{L} = \\Delta p_{lt} A \n",
+        "&=\n",
+        "\\dfrac{\\rho}{2}\\left(v_t^2-v_t^2\\right) A\n",
+        "\\end{align}"
+      ]
+    },
+    {
       "cell_type": "code",
       "metadata": {
         "colab": {
@@ -125,13 +230,16 @@
           "height": 336
         },
         "id": "hv6LSonpGSfx",
-        "outputId": "fff4d33a-bbc3-43b3-bccb-0b854665313b"
+        "cellView": "form",
+        "outputId": "80e3852b-2caf-4a0f-e9f6-e8e1c713dcf1"
       },
       "source": [
+        "#@title 実験: 迎え角の影響\n",
+        "#@markdown 下記のリンクへ進み、1:26から 30秒間動画を確認してください\n",
         "%%html\n",
         "<iframe width=\"560\" height=\"315\" src=\"https://www.youtube-nocookie.com/embed/dUhiDctsyfs\" frameborder=\"0\" allow=\"accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture\" allowfullscreen></iframe>"
       ],
-      "execution_count": 3,
+      "execution_count": 6,
       "outputs": [
         {
           "output_type": "display_data",
