--- a/01_Jan/1103_揚力.ipynb
+++ b/01_Jan/1103_揚力.ipynb
@@ -6,7 +6,7 @@
       "name": "1103_揚力",
       "provenance": [],
       "toc_visible": true,
-      "authorship_tag": "ABX9TyOYwHVwpVS30vpMWtGQFHC4",
+      "authorship_tag": "ABX9TyOayy5d9Y+HMrKvHdZvYOTi",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -110,12 +110,12 @@
       "cell_type": "code",
       "metadata": {
         "cellView": "form",
-        "id": "NYZaWb4i8K2i",
-        "outputId": "0061e139-8009-40aa-d483-cac3c6c11f1b",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 336
-        }
+        },
+        "id": "NYZaWb4i8K2i",
+        "outputId": "0061e139-8009-40aa-d483-cac3c6c11f1b"
       },
       "source": [
         "#@title 実験:揚力の簡単な実演\n",
@@ -220,6 +220,24 @@
         "&=\n",
         "\\dfrac{\\rho}{2}\\left(v_t^2-v_t^2\\right) A\n",
         "\\end{align}"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "MxLOaLqYPPrf"
+      },
+      "source": [
+        "無限遠方では, $v_t,v_l$ とも 気流の速さ(翼の速さ)に比例すると考えれば\n",
+        "\\begin{cases}\n",
+        "v_t &= c_t v\\\\\n",
+        "v_l &= c_l v\n",
+        "\\end{cases}\n",
+        "これらをまとめて\n",
+        "\\begin{align}\n",
+        "F_{L} = \\dfrac{1}{2} C \\rho A v^2.\n",
+        "\\end{align}\n",
+        "ここで $C$ は揚力定数と呼ばれます"
       ]
     },
     {
